# Labs-MidWare

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .npmrc  CLAUDE_CODE_MASTER_PROMPT.md  CLAUDE_PRODUCTION_MASTER_PROMPT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DEVELOPMENT_PLAN Procution.md  Directory.Build.props  LabConnect.slnx  Laboratory_Analyzer_Middleware_Development_Package.docx  Laboratory_Analyzer_Middleware_Production_Handoff.docx  OPERATOR_CHECKLIST.md  PRODUCT.md  PRODUCTION_EXECUTION_PLAN.md  README Procution.md  README.md  SECURITY.md  deny.toml  justfile  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.base.json
.claude/: launch.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml  release.yml  security.yml
apps/control-plane-web/: index.html  package.json  vite.config.ts  vitest.config.ts
apps/control-plane-web/src/: App.tsx  config.ts  main.tsx
apps/control-plane-web/test/: ui.test.tsx
apps/docs-site/: README.md
apps/gateway-desktop/: index.html  package.json  vite.config.ts  vitest.config.ts
apps/gateway-desktop/src/: App.tsx  main.tsx
apps/gateway-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/gateway-desktop/src-tauri/capabilities/: default.json
apps/gateway-desktop/src-tauri/icons/: icon.icns
apps/gateway-desktop/src-tauri/src/: lib.rs  main.rs
apps/gateway-desktop/test/: ui.test.tsx
crates/canonical-model/: Cargo.toml
crates/canonical-model/src/: ids.rs  lib.rs  primitives.rs  provenance.rs  result.rs
crates/canonical-model/tests/: cross_language.rs
crates/driver-runtime/: Cargo.toml
crates/driver-runtime/src/: lib.rs  manifest.rs  registry.rs  signing.rs
crates/durable-queue/: Cargo.toml
crates/durable-queue/migrations/: 0001_init.down.sql  0001_init.up.sql
crates/durable-queue/src/: error.rs  lib.rs  migrations.rs  store.rs
crates/gateway-api/: Cargo.toml
crates/gateway-api/src/: api.rs  lib.rs
crates/mapping-engine/: Cargo.toml
crates/protocol-astm/: Cargo.toml
crates/protocol-astm/src/: assembly.rs  framing.rs  lib.rs  link.rs  records.rs  sim.rs
crates/protocol-delimited/: Cargo.toml
crates/protocol-hl7/: Cargo.toml
crates/protocol-hl7/src/: ack.rs  lib.rs  message.rs  mllp.rs  net.rs
crates/transport-core/: Cargo.toml
crates/transport-core/src/: backoff.rs  capture.rs  error.rs  lib.rs  stats.rs
crates/transport-file/: Cargo.toml
crates/transport-file/src/: lib.rs
crates/transport-serial/: Cargo.toml
crates/transport-serial/src/: lib.rs
crates/transport-tcp/: Cargo.toml
crates/transport-tcp/src/: lib.rs
deploy/cloudflare/: README.md  r2-lifecycle.json
deploy/macos/: README.md
deploy/railway/: README.md  railway.json
deploy/windows/: README.md
design-system/labconnect/: MASTER.md
docs/adr/: 0001-monorepo.md  0002-rust-edge.md  0003-tauri-desktop.md  0004-aspnetcore-control-plane.md  0005-sqlite-postgres.md  0006-simulator-first.md  0007-exact-decimal.md  0008-edge-sqlite-persistence.md  0009-passive-capture-transport.md  0010-astm-engine-layering.md  0011-driver-signing.md  0012-control-plane-persistence.md  0013-ef-migrations.md  0014-fleet-lifecycle.md  0015-gateway-heartbeat.md  0016-operator-console-fleet-view.md  0017-production-execution-decisions.md  0018-row-level-security-tenant-context.md  0019-permission-catalog-and-engine.md  0020-scope-hierarchy-and-scoped-roles.md  README.md
docs/architecture/: canonical-model-v0.1.md  component-model.md  rbac-multitenancy-program.md  system-context.md
docs/operations/: backup-restore.md  billing-stripe-enablement.md  desktop-packaging.md  device-pilot-shadow-mode.md  dns-before-state.md  environment-strategy.md  go-live-checklist.md  release-engineering.md  risk-register.md  rls-rollout.md  rls-staging-smoke.md  rollout-plan.md  runbooks.md
docs/product/: PRD.md  driver-manifest-v0.1.md
docs/protocols/: hl7-support.md
docs/security/: data-classification.md  security-review-checklist.md  threat-model.md
docs/validation/: validation-strategy.md
drivers/: README.md
drivers/examples/: .gitkeep.md
drivers/generic-astm/: .gitkeep.md
drivers/generic-hl7/: .gitkeep.md
fixtures/: README.md
fixtures/canonical/: result_set.v0.1.json
scripts/: grant-owner.sh  provision-app-runtime.sh  provision-owner.sh  restore-drill.sh  smoke.sh  staging-smoke.sh  verify.sh
services/control-plane-api/: AppDbContext.cs  AppDbContextDesignFactory.cs  AuthService.cs  AuthorizationEngine.cs  AuthzLog.cs  Billing.cs  BillingProvider.cs  ControlPlane.Api.csproj  CustomRoles.cs  DatabaseConfig.cs  DeviceScope.cs  Dockerfile  EfControlPlaneStore.cs  Email.cs  Enrollment.cs  IControlPlaneStore.cs  InvitationScope.cs  MailDelivery.cs  Memberships.cs  PermissionCatalogSync.cs  Permissions.cs  PlatformScope.cs  Program.cs  RoleAssignments.cs  SchemaBootstrap.cs  ScopeService.cs  ScopedAuthorizationEngine.cs  Scopes.cs  SeparationOfDuty.cs  StripeBillingProvider.cs  TenantScope.cs  Totp.cs  UserScope.cs  packages.lock.json
services/control-plane-api.Tests/: AuthStepUpTests.cs  AuthTests.cs  BillingTests.cs  ConfigAndAuditTests.cs  ContractFixtureTests.cs  ControlPlane.Api.Tests.csproj  CorsTests.cs  CustomRolesTests.cs  EfControlPlaneStoreTests.cs  EmailFlowTests.cs  EnrollmentTests.cs  HealthEndpointTests.cs  HeartbeatTests.cs  LifecycleTests.cs  MailResilienceTests.cs  MemberAdminTests.cs  MfaTests.cs  PermissionCatalogSyncTests.cs  PermissionEngineTests.cs  QueryTranslationTests.cs  RbacTests.cs  RlsCoverageTests.cs  RoleAssignmentTests.cs  ScopeServiceTests.cs  ScopeTreeTests.cs  ScopedAuthorizationTests.cs  SeparationOfDutyTests.cs  StripeMappingTests.cs  TelemetryTests.cs  TenantSettingsTests.cs  packages.lock.json
services/gatewayd/: Cargo.toml
services/gatewayd/src/: cloud.rs  daemon.rs  main.rs  outbound.rs  pipeline.rs
services/simulator/: Cargo.toml
services/simulator/src/: main.rs
tests/: README.md
tests/conformance/: Cargo.toml
tests/conformance/src/: lib.rs
(+65 files in other folders)
