[package]
name = "canonical-model"
description = "Canonical laboratory data model and provenance identifiers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
rust_decimal.workspace = true
uuid.workspace = true
time.workspace = true

[dev-dependencies]
serde_json.workspace = true
