[package]
name = "durable-queue"
description = "Edge SQLite persistence: raw messages, outbox, acks, dedup, dead-letters, audit."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
canonical-model.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
