[package]
name = "gateway-api"
description = "Local authenticated gateway API (loopback, bearer token): health, status, redacted metadata."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
canonical-model.workspace = true
durable-queue.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tiny_http = "0.12"
