[package]
name = "protocol-astm"
description = "ASTM E1381/E1394: framing + checksum, link-layer state machine, record parsing."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
canonical-model.workspace = true
thiserror.workspace = true
