[package]
name = "protocol-hl7"
description = "HL7 v2: message parsing (lossless), MLLP framing, ACK generation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
canonical-model.workspace = true
thiserror.workspace = true
