[package]
name = "transport-core"
description = "Passive-capture transport contract: bounded buffers, stats, backoff, capture loop."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
canonical-model.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
