[package]
name = "transport-file"
description = "Passive watched-file capture: stable-write detection, allowlist, quarantine, archive."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
transport-core.workspace = true

[dev-dependencies]
