[package]
name = "transport-tcp"
description = "Passive TCP capture: listener + client, connection limits, peer allowlist, bounded."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
transport-core.workspace = true
