[package]
name = "gatewayd"
description = "Edge gateway daemon (Windows Service / macOS launchd). Communication process; not the UI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "gatewayd"
path = "src/main.rs"

[dependencies]
gateway-api.workspace = true
canonical-model.workspace = true
transport-core.workspace = true
transport-tcp.workspace = true
protocol-astm.workspace = true
protocol-hl7.workspace = true
durable-queue.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
ureq.workspace = true
native-tls.workspace = true
