[package]
name = "conformance"
description = "Validation/conformance harness: controlled synthetic cases, expected-vs-actual comparison."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
protocol-astm.workspace = true
protocol-hl7.workspace = true

[dev-dependencies]
